# content_core_sdk

./: .gitignore  README.md  pyproject.toml
content_core_sdk/common/: result.py
content_core_sdk/kafka_client/: __init__.py  client.py  config.py
content_core_sdk/kafka_client/models/: __init__.py  base_model.py  enums.py  json_generation_models.py  picture_generation_models.py  text_generation_models.py
content_core_sdk/models/: __init__.py  enums.py  json_generation_models.py  picture_generation_models.py  text_generation_models.py
content_core_sdk/postgres_client/: __init__.py  client.py  config.py  database.py  repositories.py
content_core_sdk/postgres_client/models/: __init__.py  base_model.py  character_model.py
